--- a/a6/style.css
+++ b/a6/style.css
@@ -38,6 +38,6 @@ body {
   padding: 20px 40px;
   border: 1px solid black;
   border-radius: 30px;
-  background-color: bisque;
+  background-color: rgb(203, 169, 255);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
