--- a/a21/style.css
+++ b/a21/style.css
@@ -35,7 +35,7 @@ input[type="email"] {
   border-radius: 6px;
   font-size: 16px;
   background-color: #fdf0f7;
-  color: #f1f1f1;
+  color: #090909;
 }
 
 button {
